<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="representative_button">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_button">UPCOMING ELECTIONS</string>

    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>

    <string name="state_header">Election Information</string>
    <string name="state_locations">Voting Locations</string>
    <string name="state_ballot">Ballot Information</string>
    <string name="state_correspondence_header">Correspondence Address</string>

    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>

    <string name="representatives_search_title">Representatives Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_reps">Find My Representatives</string>
    <string name="use_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="issue_getting_location">Issue getting location</string>
</resources>
