<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity"
        app:layoutDescription="@xml/fragment_representative_scene">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/headline"
            android:text="@string/representatives_search_title"/>

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title"
            android:text="@{viewModel.address.line1}"
            android:hint="@string/address_line_1"/>

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1"
            android:text="@{viewModel.address.line2}"
            android:hint="@string/address_line_2"/>

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2"
            android:text="@{viewModel.address.city}"
            android:hint="@string/city"/>

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"
            stateValue="@{viewModel.address.state}"
            />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city"
            android:text="@{viewModel.address.zip}"
            android:hint="@string/zip" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/zip"
            app:layout_constraintBottom_toTopOf="@id/button_location"
            style="@style/button_style"
            android:text="@string/find_my_reps"/>

        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            app:layout_constraintBottom_toTopOf="@id/representative_title"
            android:text="@string/use_location"/>

        <TextView
            android:id="@+id/representative_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            app:layout_constraintBottom_toTopOf="@id/representatives_recycler"
            android:text="@string/my_representatives"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            tools:itemCount="4"
            tools:listitem="@layout/list_view_representative"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>