<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.selectedElection.name}" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            style="@style/TextAppearance.MaterialComponents.Body1"
            dateText="@{viewModel.selectedElection.electionDay}" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@string/state_header"
            style="@style/subhead"/>

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@string/state_locations"/>

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@string/state_ballot"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:constraint_referenced_ids="state_correspondence_header,address" />
        
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@string/state_correspondence_header"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@{viewModel.address}"/>

        <Button
            android:id="@+id/follow_unfollow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/button_style"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>